# unikodo

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
crates/unikodo-core/: Cargo.toml
crates/unikodo-core/data/: README.md  latex-symbols.tsv  lean-symbols.tsv  rocq-symbols.tsv
crates/unikodo-core/examples/: dump_json.rs
crates/unikodo-core/src/: db.rs  lib.rs  scheme.rs  symbol.rs
crates/unikodo-lsp/: Cargo.toml
crates/unikodo-lsp/src/: main.rs
editors/vscode/: .vscodeignore  README.md  package-lock.json  package.json
editors/vscode/src/: extension.ts
editors/zed/: Cargo.toml  README.md  extension.toml
editors/zed/src/: lib.rs
scripts/: dev-vscode.sh  update-latex-symbols.py  update-lean-symbols.py  update-rocq-symbols.py  update-unicode-math-table.sh
web/: .gitignore  README.md  next.config.ts  package-lock.json  package.json
web/scripts/: build-search-index.mjs
web/src/app/: globals.css  layout.tsx  not-found.tsx  page.tsx
web/src/app/browse/: page.tsx
web/src/app/symbol/[slug]/: page.tsx
web/src/components/: app-header.tsx  code-block.tsx  copy-button.tsx  glyph-tile.tsx  glyph.tsx  scheme-badge.tsx  site-background.tsx  theme-toggle.tsx  unikodo-mark.tsx
web/src/components/andromeda/: corner-markers.tsx  panel.tsx  tag.tsx
web/src/components/browse/: browser.tsx  preview-panel.tsx
web/src/components/home/: hero-demo.tsx
web/src/components/symbol/: ways-to-type.tsx
web/src/components/ui/: button.tsx
web/src/data/: blocks.json  names.json  symbols.json
web/src/lib/: featured.ts  schemes.ts  search.ts  slug.ts  symbols.ts  utils.ts
