[package]
name = "unikodo-core"
description = "Unicode (math) symbol database and completion matching for unikodo"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true

# The symbol table is embedded at compile time; keep it in the published package.
include = ["src/**/*.rs", "data/*.tex", "data/*.tsv", "data/README.md"]

[dependencies]
# Typst symbol names (the `sym` module). Apache-2.0; the `numeral-systems` and
# `styling` default features (and their deps) are not needed.
codex = { workspace = true }

[dev-dependencies]
# Used only by `examples/dump_json.rs` to export the symbol DB for the web
# frontend; not a runtime dependency of the library.
serde_json = { workspace = true }
